@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2011 Intel Corporation and others.
+ * Copyright (c) 2007, 2016 Intel Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -236,7 +236,7 @@ public class CLanguageSetting extends CDataProxy implements
 		for(int i = 0; i < entries.length; i++){
 			ICLanguageSettingEntry entry = entries[i];
 			if(entry != null){
-				Integer iKind = new Integer(entry.getKind());
+				Integer iKind = Integer.valueOf(entry.getKind());
 				List[] addedRemovedListArr = (List[])map.get(iKind);
 				if(addedRemovedListArr == null){
 					addedRemovedListArr = new List[2];
