@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2013 Wind River Systems, Inc. and others.
+ * Copyright (c) 2006, 2016 Wind River Systems, Inc. and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -89,7 +89,7 @@ public class CHLabelProvider extends AppearanceAwareLabelProvider {
             	}
             	int refCount= node.getReferenceCount();
             	if (refCount > 1) {
-            		label += NLS.bind(" ({0} {1})", new Integer(refCount), CHMessages.CHLabelProvider_matches);  //$NON-NLS-1$
+            		label += NLS.bind(" ({0} {1})", Integer.valueOf(refCount), CHMessages.CHLabelProvider_matches);  //$NON-NLS-1$
             	}
             	return decorateText(label, element);
             }
@@ -118,7 +118,7 @@ public class CHLabelProvider extends AppearanceAwareLabelProvider {
             	int refCount= node.getReferenceCount();
             	if (refCount > 1) {
             		final int offset= label.length();
-            		label.append(NLS.bind(" ({0} {1})", new Integer(refCount), CHMessages.CHLabelProvider_matches));  //$NON-NLS-1$
+            		label.append(NLS.bind(" ({0} {1})", Integer.valueOf(refCount), CHMessages.CHLabelProvider_matches));  //$NON-NLS-1$
                 	label.setStyle(offset, label.length() - offset, StyledString.COUNTER_STYLER);
     				
             	}
