@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 Wind River Systems and others.
+ * Copyright (c) 2006, 2016 Wind River Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -265,7 +265,7 @@ public class DsfQueryTests {
         // Complete rm and query.
         @SuppressWarnings("unchecked")
         DataRequestMonitor<Integer> drm = (DataRequestMonitor<Integer>)rmHolder[0]; 
-        drm.setData(new Integer(1));
+        drm.setData(Integer.valueOf(1));
         rmHolder[0].done();
         
         // Try to retrieve data again, it should still result in 
